[package]
name = "MapChannelsRust"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "0.8.1", features = ["v4"] }

[[bin]]
name = "MapChannelsRust"
path = "main.rs"
